<resources>
    <string name="app_name">Sudoku</string>
    <string name="grid_view_input_bt_1">1</string>
    <string name="grid_view_input_bt_2">2</string>
    <string name="grid_view_input_bt_3">3</string>
    <string name="grid_view_input_bt_4">4</string>
    <string name="grid_view_input_bt_5">5</string>
    <string name="grid_view_input_bt_6">6</string>
    <string name="grid_view_input_bt_7">7</string>
    <string name="grid_view_input_bt_8">8</string>
    <string name="grid_view_input_bt_9">9</string>
</resources>
