<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".ui.view.PlaySudokuActivity">

        <com.phosphor.sudoku.ui.view.custom.SudokuBoardView
                android:id="@+id/sudokuBoardView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@+id/buttonsLayout"
        />
        <GridLayout
            android:id="@+id/buttonsLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:rowCount="4"
            android:columnCount="3"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true">

            <Button
                android:id="@+id/oneButton"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/grid_view_input_bt_1"
                android:layout_row="0"
                android:layout_column="0"/>
            <Button
                android:id="@+id/twoButton"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/grid_view_input_bt_2"
                android:layout_row="0"
                android:layout_column="1"/>
            <Button
                android:id="@+id/threeButton"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/grid_view_input_bt_3"
                android:layout_row="0"
                android:layout_column="2"/>
            <Button
                android:id="@+id/fourButton"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/grid_view_input_bt_4"
                android:layout_row="1"
                android:layout_column="0"/>
            <Button
                android:id="@+id/fiveButton"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/grid_view_input_bt_5"
                android:layout_row="1"
                android:layout_column="1"/>
            <Button
                android:id="@+id/sixButton"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/grid_view_input_bt_6"
                android:layout_row="1"
                android:layout_column="2"/>
            <Button
                android:id="@+id/sevenButton"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/grid_view_input_bt_7"
                android:layout_row="2"
                android:layout_column="0"/>
            <Button
                android:id="@+id/eightButton"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/grid_view_input_bt_8"
                android:layout_row="2"
                android:layout_column="1"/>
            <Button
                android:id="@+id/nineButton"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/grid_view_input_bt_9"
                android:layout_row="2"
                android:layout_column="2"/>
            <ImageButton
                android:id="@+id/notesButton"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_row="3"
                android:layout_column="0"
                app:srcCompat="@drawable/ic_edit_black_24dp"/>
        </GridLayout>

</RelativeLayout>